[gd_scene load_steps=5 format=3 uid="uid://buuqeg1s6agss"]

[ext_resource type="Script" path="res://Screens/CityScreens/Buildings/Arena/battle_complete_scene.gd" id="1_etv47"]
[ext_resource type="PackedScene" uid="uid://f77t4dd6qskq" path="res://Screens/BaseUIScene.tscn" id="2_p62f3"]
[ext_resource type="Texture2D" uid="uid://be0l6dpmaoujp" path="res://Screens/CityScreens/Buildings/Arena/ArenaBattle/noun-flags-75891.svg" id="3_6pftb"]
[ext_resource type="Script" path="res://Screens/CityScreens/Buildings/Arena/other.gd" id="4_x2qdd"]

[node name="BattleCompleteScene" type="Node2D"]
script = ExtResource("1_etv47")

[node name="BaseUiScene" parent="." instance=ExtResource("2_p62f3")]

[node name="TextureRect" parent="BaseUiScene" index="0"]
offset_right = 986.0
texture = ExtResource("3_6pftb")

[node name="VBoxContainer" parent="BaseUiScene" index="1"]
offset_left = 38.0
offset_top = 33.0
offset_bottom = 733.0

[node name="Title" parent="BaseUiScene/VBoxContainer" index="0"]
text = "Battle Complete"

[node name="Label" type="Label" parent="BaseUiScene/VBoxContainer" index="1"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "You Win, I guess? 
<TODO some sort of prize for winning>
"
autowrap_mode = 3

[node name="Activity TabContainer" type="TabContainer" parent="BaseUiScene/VBoxContainer" index="2"]
layout_mode = 2
current_tab = 0

[node name="Arena Battles" type="VBoxContainer" parent="BaseUiScene/VBoxContainer/Activity TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Div 5 Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Arena Battles"]
layout_mode = 2
text = "Div 5"

[node name="Div 10 Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Arena Battles"]
layout_mode = 2
text = "Div 10"

[node name="Div 15 Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Arena Battles"]
layout_mode = 2
text = "Div 15"

[node name="Div 20 Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Arena Battles"]
layout_mode = 2
text = "Div 20"

[node name="Div 25 Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Arena Battles"]
layout_mode = 2
text = "Div 25"

[node name="Div 30 Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Arena Battles"]
layout_mode = 2
text = "Div 30"

[node name="Unlimited Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Arena Battles"]
layout_mode = 2
text = "Unlimited"

[node name="Other" type="VBoxContainer" parent="BaseUiScene/VBoxContainer/Activity TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_x2qdd")
metadata/_tab_index = 1

[node name="Arena Battle Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Other"]
layout_mode = 2
text = "Fight in an Arena Battle"

[node name="Highway Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Other"]
layout_mode = 2
text = "Plan a Highway Trip"

[node name="SaveGame Button" type="Button" parent="BaseUiScene/VBoxContainer/Activity TabContainer/Other"]
layout_mode = 2
text = "Save Game"

[connection signal="pressed" from="BaseUiScene/VBoxContainer/Activity TabContainer/Other/Arena Battle Button" to="." method="_on_arena_battle_button_pressed"]
[connection signal="pressed" from="BaseUiScene/VBoxContainer/HBoxContainer/OK Button" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="BaseUiScene/VBoxContainer/HBoxContainer/Cancel Button" to="." method="_on_cancel_button_pressed"]

[editable path="BaseUiScene"]
